syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// User represents a user entity
message User {
  string id = 1;
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
  string email = 3 [(buf.validate.field).string = {
    email: true
    max_len: 255
  }];
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// CreateUserRequest is the request message for creating a user
message CreateUserRequest {
  // User's full name
  // Validation errors:
  //   - reason: "USER_NAME_NOT_EMPTY" - name cannot be empty (custom CEL rule)
  //   - reason: "STRING_MIN_LEN" - value length must be at least 1 characters
  //   - reason: "STRING_MAX_LEN" - value length must be at most 255 characters
  string name = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];

  // User's email address
  // Validation errors:
  //   - reason: "STRING_EMAIL" - value must be a valid email address
  //   - reason: "STRING_MAX_LEN" - value length must be at most 255 characters
  string email = 2 [(buf.validate.field).string = {
    email: true
    max_len: 255
  }];

  // User's password
  // Validation errors:
  //   - reason: "STRING_MIN_LEN" - value length must be at least 8 characters
  //   - reason: "STRING_MAX_LEN" - value length must be at most 72 characters
  string password = 3 [(buf.validate.field).string = {
    min_len: 8
    max_len: 72
  }];

  // Password confirmation (must match password field)
  string password_confirmation = 4;

  // Multiple fields validation: passwords must match
  // Validation errors:
  //   - reason: "PASSWORD_MISMATCH" - passwords must match
  option (buf.validate.message).cel = {
    id: "password_mismatch"
    message: "passwords must match"
    expression: "this.password == this.password_confirmation"
  };
}

// CreateUserResponse is the response message for creating a user
message CreateUserResponse {
  User user = 1;
}

// UserService provides user-related operations
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}
